@@ -16,9 +16,10 @@
     along with this program.  If not, see <http://www.gnu.org/licenses/>.
 '''
 
+import re
 import sys
-import urllib
 import cgi
+import urllib
 try: import simplejson as json
 except ImportError: import json
 
@@ -56,6 +57,7 @@ class YouTubePlayer():
     urls['embed_stream'] = "http://www.youtube.com/get_video_info?video_id=%s"
     urls['video_info'] = "http://gdata.youtube.com/feeds/api/videos/%s"
 
+
     def __init__(self):
         self.xbmcgui = sys.modules["__main__"].xbmcgui
         self.xbmcplugin = sys.modules["__main__"].xbmcplugin
@@ -72,6 +74,8 @@ class YouTubePlayer():
         self.core = sys.modules["__main__"].core
         self.login = sys.modules["__main__"].login
         self.subtitles = sys.modules["__main__"].subtitles
+
+        self.algoCache = {}
 
     def playVideo(self, params={}):
         self.common.log(repr(params), 3)
@@ -93,7 +97,6 @@ class YouTubePlayer():
         self.xbmcplugin.setResolvedUrl(handle=int(sys.argv[1]), succeeded=True, listitem=listitem)
 
         if self.settings.getSetting("lang_code") != "0" or self.settings.getSetting("annotations") == "true":
-            self.common.log("BLAAAAAAAAAAAAAAAAAAAAAA: " + repr(self.settings.getSetting("lang_code")))
             self.subtitles.addSubtitles(video)
 
         if (get("watch_later") == "true" and get("playlist_entry_id")):
@@ -304,7 +307,12 @@ class YouTubePlayer():
             data = data[:pos + 1]
         return data
 
-    def extractFlashVars(self, data):
+    def normalizeUrl(self, url):
+        if url[0:2] == "//":
+            url = "http:" + url
+        return url
+
+    def extractFlashVars(self, data, assets=0):
         flashvars = {}
         found = False
 
@@ -321,8 +329,16 @@ class YouTubePlayer():
 
         if found:
             data = json.loads(data)
-            flashvars = data["args"]
-        self.common.log("Step2: " + repr(data))
+            if assets:
+                flashvars = data["assets"]
+            else:
+                flashvars = data["args"]
+
+        for k in ["html", "css", "js"]:
+            if k in flashvars:
+                flashvars[k] = self.normalizeUrl(flashvars[k])
+
+        self.common.log("Step2: " + repr(data), 4)
 
         self.common.log(u"flashvars: " + repr(flashvars), 2)
         return flashvars
@@ -363,42 +379,163 @@ class YouTubePlayer():
                 url = url + u"&signature=" + url_desc_map[u"sig"][0]
             elif url_desc_map.has_key(u"s"):
                 sig = url_desc_map[u"s"][0]
-                url = url + u"&signature=" + self.decrypt_signature(sig)
+                flashvars = self.extractFlashVars(result[u"content"], 1)
+                url = url + u"&signature=" + self.decrypt_signature(sig, flashvars[u"js"])
 
             links[key] = url
 
         return links
 
-    def decrypt_signature(self, s):
-        ''' use decryption solution by Youtube-DL project '''
-        if len(s) == 88:
-            return s[48] + s[81:67:-1] + s[82] + s[66:62:-1] + s[85] + s[61:48:-1] + s[67] + s[47:12:-1] + s[3] + s[11:3:-1] + s[2] + s[12]
-        elif len(s) == 87:
-            return s[62] + s[82:62:-1] + s[83] + s[61:52:-1] + s[0] + s[51:2:-1]
-        elif len(s) == 86:
-            return s[2:63] + s[82] + s[64:82] + s[63]
-        elif len(s) == 85:
-            return s[76] + s[82:76:-1] + s[83] + s[75:60:-1] + s[0] + s[59:50:-1] + s[1] + s[49:2:-1]
-        elif len(s) == 84:
-            return s[83:36:-1] + s[2] + s[35:26:-1] + s[3] + s[25:3:-1] + s[26]
-        elif len(s) == 83:
-            return s[6] + s[3:6] + s[33] + s[7:24] + s[0] + s[25:33] + s[53] + s[34:53] + s[24] + s[54:]
-        elif len(s) == 82:
-            return s[36] + s[79:67:-1] + s[81] + s[66:40:-1] + s[33] + s[39:36:-1] + s[40] + s[35] + s[0] + s[67] + s[32:0:-1] + s[34]
-        elif len(s) == 81:
-            return s[6] + s[3:6] + s[33] + s[7:24] + s[0] + s[25:33] + s[2] + s[34:53] + s[24] + s[54:81]
-        elif len(s) == 92:
-            return s[25] + s[3:25] + s[0] + s[26:42] + s[79] + s[43:79] + s[91] + s[80:83];
-        else:
-            self.common.log(u'Unable to decrypt signature, key length %d not supported; retrying might work' % (len(s)))
+    def _jsToPy(self, jsFunBody):
+        pythonFunBody = re.sub(r'function (\w*)\$(\w*)', r'function \1_S_\2', jsFunBody)
+        pythonFunBody = pythonFunBody.replace('function', 'def').replace('{', ':\n\t').replace('}', '').replace(';', '\n\t').replace('var ', '')
+        pythonFunBody = pythonFunBody.replace('.reverse()', '[::-1]')
 
-    def getVideoPageFromYoutube(self, get):
+        lines = pythonFunBody.split('\n')
+        for i in range(len(lines)):
+            # a.split("") -> list(a)
+            match = re.search('(\w+?)\.split\(""\)', lines[i])
+            if match:
+                lines[i] = lines[i].replace( match.group(0), 'list(' + match.group(1)  + ')')
+            # a.length -> len(a)
+            match = re.search('(\w+?)\.length', lines[i])
+            if match:
+                lines[i] = lines[i].replace( match.group(0), 'len(' + match.group(1)  + ')')
+            # a.slice(3) -> a[3:]
+            match = re.search('(\w+?)\.slice\(([0-9]+?)\)', lines[i])
+            if match:
+                lines[i] = lines[i].replace( match.group(0), match.group(1) + ('[%s:]' % match.group(2)) )
+            # a.join("") -> "".join(a)
+            match = re.search('(\w+?)\.join\(("[^"]*?")\)', lines[i])
+            if match:
+                lines[i] = lines[i].replace( match.group(0), match.group(2) + '.join(' + match.group(1) + ')' )
+        return "\n".join(lines)
+
+    def _getLocalFunBody(self, funName, playerData):
+        # get function body
+        funName=funName.replace('$', '\\$')
+        match = re.search('(function %s\([^)]+?\){[^}]+?})' % funName, playerData)
+        if match:
+            # return jsFunBody
+            return match.group(1)
+        return ''
+
+    def _getAllLocalSubFunNames(self, mainFunBody):
+        match = re.compile('[ =(,]([\w\$_]+)\([^)]*\)').findall( mainFunBody )
+        if len(match):
+            # first item is name of main function, so omit it
+            funNameTab = set( match[1:] )
+            return funNameTab
+        return set()
+
+    def decrypt_signature(self, s, playerUrl):
+        self.common.log("decrypt_signature sign_len[%d] playerUrl[%s]" % (len(s), playerUrl) )
+
+        # use algoCache
+        if playerUrl not in self.algoCache:
+            # get player HTML 5 sript
+            res = self.core._fetchPage({u"link": playerUrl})
+            playerData = res["content"]
+            try:
+                playerData = playerData.decode('utf-8', 'ignore')
+            except Exception as ex:
+                self.common.log("Error: " + str(sys.exc_info()[0]) + " - " + str(ex))
+                self.common.log('Unable to download playerUrl webpage')
+                return ''
+
+            # get main function name
+            match = re.search("signature=(\w+?)\([^)]\)", playerData)
+            if match:
+                mainFunName = match.group(1)
+                self.common.log('Main signature function name = "%s"' % mainFunName)
+            else:
+                self.common.log('Can not get main signature function name')
+                return ''
+
+            fullAlgoCode = self._getfullAlgoCode( mainFunName, playerData )
+
+            # wrap all local algo function into one function extractedSignatureAlgo()
+            algoLines = fullAlgoCode.split('\n')
+            for i in range(len(algoLines)):
+                algoLines[i] = '\t' + algoLines[i]
+            fullAlgoCode  = 'def extractedSignatureAlgo(param):'
+            fullAlgoCode += '\n'.join(algoLines)
+            fullAlgoCode += '\n\treturn %s(param)' % mainFunName
+            fullAlgoCode += '\noutSignature = extractedSignatureAlgo( inSignature )\n'
+
+            # after this function we should have all needed code in fullAlgoCode
+
+            self.common.log( "---------------------------------------" )
+            self.common.log( "|    ALGO FOR SIGNATURE DECRYPTION    |" )
+            self.common.log( "---------------------------------------" )
+            self.common.log( fullAlgoCode                         )
+            self.common.log( "---------------------------------------" )
+
+            try:
+                algoCodeObj = compile(fullAlgoCode, '', 'exec')
+            except:
+                self.common.log('decryptSignature compile algo code EXCEPTION')
+                return ''
+        else:
+            # get algoCodeObj from algoCache
+            self.common.log('Algo taken from cache')
+            algoCodeObj = self.algoCache[playerUrl]
+
+        # for security alow only flew python global function in algo code
+        vGlobals = {"__builtins__": None, 'len': len, 'list': list}
+
+        # local variable to pass encrypted sign and get decrypted sign
+        vLocals = { 'inSignature': s, 'outSignature': '' }
+
+        # execute prepared code
+        try:
+            exec( algoCodeObj, vGlobals, vLocals )
+        except:
+            self.common.log('decryptSignature exec code EXCEPTION')
+            return ''
+
+        self.common.log('Decrypted signature = [%s]' % vLocals['outSignature'])
+        # if algo seems ok and not in cache, add it to cache
+        if playerUrl not in self.algoCache and '' != vLocals['outSignature']:
+            self.common.log('Algo from player [%s] added to cache' % playerUrl)
+            self.algoCache[playerUrl] = algoCodeObj
+
+        return vLocals['outSignature']
+
+    # Note, this method is using a recursion
+    def _getfullAlgoCode( self, mainFunName, playerData, recDepth = 0, allLocalFunNamesTab=[] ):
+        # Max recursion of 5
+        if 5 <= recDepth:
+            self.common.log('_getfullAlgoCode: Maximum recursion depth exceeded')
+            return
+
+        funBody = self._getLocalFunBody( mainFunName, playerData)
+        if '' != funBody:
+            funNames = self._getAllLocalSubFunNames(funBody)
+            if len(funNames):
+                for funName in funNames:
+                    funName_=funName.replace('$','_S_')
+                    if funName not in allLocalFunNamesTab:
+                        funBody=funBody.replace(funName,funName_)
+                        allLocalFunNamesTab.append(funName)
+                        self.common.log("Add local function %s to known functions" % mainFunName)
+                        funBody = self._getfullAlgoCode( funName, playerData, recDepth + 1, allLocalFunNamesTab ) + "\n" + funBody
+
+            # conver code from javascript to python
+            funBody = self._jsToPy(funBody)
+            return '\n' + funBody + '\n'
+        return funBody
+
+    def getVideoPageFromYoutube(self, get, has_verified = False):
         login = "false"
+        verify = ""
 
         if self.pluginsettings.userHasProvidedValidCredentials():
             login = "true"
+            if has_verified:
+                verify = u"&has_verified=1"
 
-        page = self.core._fetchPage({u"link": self.urls[u"video_stream"] % get(u"videoid"), "login": login})
+        page = self.core._fetchPage({u"link": (self.urls[u"video_stream"] % get(u"videoid")) + verify, "login": login})
         self.common.log("Step1: " + repr(page["content"].find("ytplayer")))
 
         if not page:
@@ -419,8 +556,7 @@ class YouTubePlayer():
         if self.isVideoAgeRestricted(result):
             self.common.log(u"Age restricted video")
             if self.pluginsettings.userHasProvidedValidCredentials():
-                self.login._httpLogin({"new":"true"})
-                result = self.getVideoPageFromYoutube(get)
+                result = self.getVideoPageFromYoutube(get, True)
             else:
                 video[u"apierror"] = self.language(30622)
 
