@@ -8,7 +8,17 @@
 - [XBMC] When sorting items, it's impossible to get them to return to their original order
 - [XBMC] Has Excessive Memory use after running the plugin for prolonged periods of time
 - [RTMPDUMP] Doesn't support handshake type 10 which is required by youtube.
-- Youtube implemented encryption of signatures, without knowing the proper decryption method this VEVO content will remain unstable
+- [YOUTUBE] Requesting suggestions/recommendations from youtube sometimes stalls.
+
+[B]Version 3.4.8[/B]
+- Fixed login issues for all five login methods.
+- Refactored VEVO video playback code.
+
+[B]Version 3.4.7[/B]
+- Fixed a problem with VEVO videos not playing
+- Fixed a problem with LIVE streams not playing.
+- Fixed Login Problem with non English languages.
+- Fixed: When you are in a non English speaking country, youtube returns the pages by default in your language. The plugin sometimes gave an error in this situation.
 
 [B]Version 3.4.6[/B]
 - Fixed: Age verification working again due
